Added exit survey and force users to answer it before reward

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -587,6 +587,7 @@
         <item>allow</item>
         <item>enable</item>
         <item>grant</item>
+        <item>got it</item>
         <item>ok</item>
         <item>okay</item>
         <item>permit</item>
@@ -800,4 +801,131 @@
     <string name="user_in_one_country_reaches_limit_message">
         We paused on recruiting participants from your region. Please check back later if there are new openings available. Thank you!
     </string>
+    
+    <string name="exit_survey_screen_title">Exit Survey</string>
+    <string name="exit_survey_control_group">Control</string>
+    <string name="exit_survey_control_question_one">
+        1. Consumer online privacy is really a matter of consumers\’ right to exercise control and autonomy over
+        decisions about how their information is collected, used, and shared.
+    </string>
+    <string name="exit_survey_control_question_two">
+        2. Consumer control of personal information lies at the heart of consumer privacy.
+    </string>
+    <string name="exit_survey_control_question_three">
+        3. I believe that online privacy is invaded when control is lost or unwillingly reduced as a result of a marketing transaction.
+    </string>
+    <string name="exit_survey_awareness_group">Awareness of privacy practices</string>
+    <string name="exit_survey_awareness_question_one">
+        1. Companies seeking information online should disclose the way the data are collected, processed, and used.
+    </string>
+    <string name="exit_survey_awareness_question_two">
+        2. A good consumer online privacy policy should have a clear and conspicuous disclosure.
+    </string>
+    <string name="exit_survey_awareness_question_three">
+        3. It is very important to me that I am aware and knowledgeable about how my personal information will be used.
+    </string>
+    <string name="exit_survey_collection_group">Collection</string>
+    <string name="exit_survey_collection_question_one">
+        1. It usually bothers me when online companies ask me for personal information.
+    </string>
+    <string name="exit_survey_collection_question_two">
+        2. When online companies ask me for personal information. I sometimes think twice before providing it.
+    </string>
+    <string name="exit_survey_collection_question_three">
+        3. It bothers me to give personal information to so many online companies.
+    </string>
+    <string name="exit_survey_error_group">Error</string>
+    <string name="exit_survey_error_question_one">
+        1. All the personal information in computer databases should be double-checked for accuracy-no matter how much this costs.
+    </string>
+    <string name="exit_survey_error_question_two">
+        2. Online companies should take more steps to make sure that the personal information in their files is accurate.
+    </string>
+    <string name="exit_survey_error_question_three">
+        3. Online companies should have better procedures to correct errors in personal information.
+    </string>
+    <string name="exit_survey_error_question_four">
+        4. Online companies should devote more time and effort to verify the accuracy of the personal information in their databases.
+    </string>
+    <string name="exit_survey_secondary_use_group">Unauthorized secondary use</string>
+    <string name="exit_survey_secondary_use_question_one">
+        1. Online companies should not use personal information for any purpose unless it has been authorized by the individuals who provided information.
+    </string>
+    <string name="exit_survey_secondary_use_question_two">
+        2. When people give personal information to an online company for some reason, the online company should never use the information for any other reason.
+    </string>
+    <string name="exit_survey_secondary_use_question_three">
+        3. Suggestion: Online companies should be able to use personal information for purposes that have not been authorized if it can be shown that the use has public benefit (i.e. health or education statistics).
+    </string>
+    <string name="exit_survey_secondary_use_question_four">
+        4. Online companies should never sell the personal information in their computer databases to other companies.
+    </string>
+    <string name="exit_survey_secondary_use_question_five">
+        5. Online companies should never share personal information with other companies unless it has been authorized by the individual who provided the information.
+    </string>
+    <string name="exit_survey_improper_group">Improper access</string>
+    <string name="exit_survey_improper_question_one">
+        1. Online companies should devote more time and effort to preventing unauthorized access to personal information.
+    </string>
+    <string name="exit_survey_improper_question_two">
+        2. Computer databases that contain personal information should be protected from unauthorized access-no matter how much it costs.
+    </string>
+    <string name="exit_survey_improper_question_three">
+        3. Online companies should take more steps to make sure that unauthorized people cannot access personal information in their computers.
+    </string>
+    <string name="exit_survey_global_group">Global information privacy concern</string>
+    <string name="exit_survey_global_question_one">
+        1. Compared to others, I am more sensitive about the way online companies handle my personal information.
+    </string>
+    <string name="exit_survey_global_question_two">
+        2. To me, it is the most important thing to keep my privacy intact from online companies.
+    </string>
+    <string name="exit_survey_global_question_three">
+        3. I believe other people are too much concerned with online privacy issues.
+    </string>
+    <string name="exit_survey_global_question_four">
+        4. Compared with other subjects on my mind, personal privacy is very important.
+    </string>
+    <string name="exit_survey_global_question_five">
+        5. I am concerned about threats to my personal privacy today.
+    </string>
+    <string-array name="uipc_question_options">
+        <item>Very Strongly Agree</item>
+        <item>Strongly Agree</item>
+        <item>Agree</item>
+        <item>Neither Agree Nor Disagree</item>
+        <item>Disagree</item>
+        <item>Strongly Disagree</item>
+        <item>Very Strongly Disagree</item>
+    </string-array>
+    <string name="exit_survey_additional_group">Additional questions</string>
+    <string name="exit_survey_additional_question_familiar">
+        1. How familiar are you with the Android permission system?
+    </string>
+    <string-array name="exit_survey_additional_question_familiar_options">
+        <item>Very Familiar</item>
+        <item>Somewhat Familiar</item>
+        <item>Not Very Familiar</item>
+        <item>Never Heard of This</item>
+    </string-array>
+    <string name="exit_survey_additional_question_dont_understand">
+        2. Are there android permissions you do not understand what it means or what it does? Please select all permissions that you do not understand.
+    </string>
+    <string-array name="exit_survey_additional_question_dont_understand_options">
+        <item>Camera</item>
+        <item>Contacts</item>
+        <item>Location</item>
+        <item>Microphone</item>
+        <item>Phone</item>
+        <item>Storage</item>
+        <item>Body Sensors</item>
+        <item>Calendar</item>
+        <item>SMS</item>
+        <item>Call Logs</item>
+        <item>None</item>
+    </string-array>
+    <string name="need_to_answer_the_demographic_survey_before_rewards">You need to answer the demographic survey before getting reward.</string>
+    <string name="need_to_answer_the_exit_survey_before_rewards">You need to answer the exit survey before getting reward.</string>
+    <string name="exit_survey_complete_join_date_text">You join the experiment on %1$s. Come back to fill the exit survey before you submit request for reward.</string>
+    <string name="exit_survey_completed_complete_join_date_text">You join the experiment on %1$s. Thank you for completing the exit survey.</string>
 </resources>
