--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -560,13 +560,19 @@
     <string name="android_n_deny_anyway_in_permission_deny_warning_dialog_screen_text">Deny Anyway</string>
     <string name="android_o_app_info_screen_text">App info</string>
     <string name="android_o_app_permissions_screen_text">App permissions</string>
+    <string name="android_q_app_permissions_screen_text">Permission manager</string>
     <string name="android_o_apps_and_notifications_screen_text">Apps &amp; notifications</string>
     <string name="android_permissions_screen_text">Permissions</string>
     <string name="android_storage_screen_text">Storage</string>
+    <string name="android_storage_and_cache_screen_text">Storage &amp; cache</string>
     <string name="android_camera_screen_text">Camera</string>
     <string name="android_body_sensors_screen_text">Body Sensors</string>
     <string name="android_dialog_allow_screen_text">Allow</string>
     <string name="android_dialog_deny_screen_text">Deny</string>
+    <string name="android_permission_settings_screen_allowed">ALLOWED</string>
+    <string name="android_permission_settings_screen_denied">DENIED</string>
+    <string name="android_dialog_deny_and_never_show_again">Deny &amp; don\'t ask again</string>
+    <string name="android_dialog_allow_only_foreground">Allow only while using the app</string>
     <string name="android_allow_x_to_x_screen_regex">Allow (.*) to (.*)\\?</string>
 
     <array name="android_permission_categories">
@@ -805,7 +811,7 @@
         be eligible for reward. You are always welcomed to come back later when there are additional
         openings. Thank you!
     </string>
-    
+
     <string name="exit_survey_screen_title">Exit Survey</string>
     <string name="exit_survey_control_group">Control</string>
     <string name="exit_survey_control_question_one">
@@ -935,4 +941,7 @@
     <string name="user_decided_to_join_without_reward_fact">
         You agreed to join the experiment without pay. Not eligible for reward.
     </string>
+
+    <string name="x_permission_access_for_this_app_regex">(.*) ACCESS FOR THIS APP</string>
+    <string name="x_permission_title_regex">(.*) permission</string>
 </resources>
