--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,6 +163,18 @@
         <item>Other</item>
     </array>
 
+    <string name="permission_grant_question_temporary">4. Do you want to grant the permission temporarily?</string>
+    <array name="permission_grant_options_temporary">
+        <item>Yes</item>
+        <item>No</item>
+    </array>
+
+    <string name="permission_grant_question_reminder">5. Would you like a notification to remind you of disabling this permission later?</string>
+    <array name="permission_grant_options_reminder">
+        <item>Yes</item>
+        <item>No</item>
+    </array>
+
     <string name="permission_deny_question_why" description="permission deny survey event why">1. Why did you deny the permission request?</string>
     <array name="permission_deny_options_why">
         <item>I think the app shouldn\’t need this permission</item>
@@ -955,4 +967,7 @@
     <string name="accessibility_reminder_notification_text">Accessibility service is required for PrivaDroid to work properly.</string>
     <string name="app_usage_reminder_notification_title">Enable App Usage for PrivaDroid</string>
     <string name="app_usage_reminder_notification_text">App Usage access is required for PrivaDroid to work properly.</string>
+
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
