--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,8 @@
     <string name="profile_screen_title">Profile</string>
     <string name="your_id">PrivaDroid ID</string>
     <string name="join_date">Join Date</string>
+    <string name="last_heartbeat">Last Heartbeat Reminder</string>
+    <string name="last_demographic">Last Demographic Reminder</string>
 
     <string name="app_install_screen_title">App Install</string>
     <string name="app_uninstall_screen_title">App Uninstall</string>
@@ -970,4 +972,5 @@
 
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="not_applicable">N/\A</string>
 </resources>
