--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,7 +113,7 @@
     <string name="why_uninstall_app_on_date_list_item_description" description="format text for app uninstall question">Why did you uninstall %1$s on %2$s?</string>
     <string name="why_install_app_description" description="format text for app install short question">Why did you install %1$s?</string>
     <string name="why_uninstall_app_description" description="format text for app uninstall short question">Why did you uninstall %1$s?</string>
-    <string name="permission_app_name_list_item_title" description="Permission name of app name format text">%1$s of %2$s</string>
+    <string name="permission_app_name_list_item_title" description="Permission name of app name format text">%1$s permission requested by %2$s app</string>
     <string name="why_grant_permission_for_app_description" description="permission grant format question">Why did you grant %1$s permission to %2$s app on %3$s?</string>
     <string name="why_deny_permission_for_app_description" description="permission deny format question">Why did you deny %1$s permission to %2$s app on %3$s?</string>
     <string name="why_always_grant_permission_for_app_description">Why did you decide to always grant %1$s permission to %2$s app on %3$s?</string>
